# framebuffer-vncserver

./: CMakeLists.txt  framebuffer-vncserver.service
src/: framebuffer-vncserver.c
